óptimo del juego.


Cambios presentados el 2021/02/06
---------------------------------
Se cambian algunos sprites del juego, incluyendo los tamaños de sus actores.

También se relaja el modo en el que el juego responde a algunos fallos del jugador:
Si se pierde toda la salud o choca contra un ventilador, tan solo se decrementa en
uno el contador de mascarillas, en vez de hacer que el jugador pierda de inmediato.
Considero que así es más justo, ya que estos peligros estaban demasiado
desproporcionados con respecto al que suponía chocar con un virus.


Cambios presentados el 2021/02/07
---------------------------------
Se añade la posibilidad de añadir transiciones a las pantallas del juego, mediante
una simple clase de subpantalla, y se incorpora una al principio de la fase de la
cuenta atrás.

También se añaden los contadores de tiempo a la interfaz que se muestra encima de
la partida.


Cambios presentados el 2021/02/09
---------------------------------
Se remplazan getDemoLevel() y el package levels por un sistema de cargado de niveles
desde archivos JSON, y se redefine el nivel de demostración en este nuevo formato.


Cambios presentados el 2021/02/19
---------------------------------
Se añaden algunas músicas y efectos sonoros, aunque todavía son una minoría.

Se implementa StagedScreen para hacer más fácil implementar pantallas con varias
fases, del mismo modo que ya lo estaba haciendo GameScreen.

Se añade una primera versión de la pantalla que muestra los resultados de la
partida.


Cambios presentados el 2021/02/23
---------------------------------
Se añade el modo de pausa del juego, activado mediante un gesto físico con el móvil
que se detecta con el giroscopio.

También se añaden algunas músicas y sonidos.


Cambios presentados el 2021/02/25
---------------------------------
Se remplaza el sistema de "subpantallas" por un mecanismo mejor de gestión de las
diferentes vistas y fases del juego.